--- a/pom.xml
+++ b/pom.xml
@@ -18,27 +18,22 @@
         </plugins>
     </build>
     <dependencies>
-    <!--<dependency>-->
-        <!--<groupId>org.apache.sanselan</groupId>-->
-        <!--<artifactId>sanselan</artifactId>-->
-        <!--<version>0.97-incubator</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-        <!--<groupId>org.apache.commons</groupId>-->
-        <!--<artifactId>commons-imaging</artifactId>-->
-        <!--<version>1.0-SNAPSHOT</version>-->
-    <!--</dependency>-->
     <dependency>
         <groupId>com.harium.storage</groupId>
         <artifactId>kdtree</artifactId>
         <version>1.0.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
-    <!--<dependency>-->
-        <!--<groupId>org.apache.commons</groupId>-->
-        <!--<artifactId>commons-imaging</artifactId>-->
-        <!--<version>1.0</version>-->
-    <!--</dependency>-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
 
-</dependencies>
+
+    </dependencies>
 </project>
